--- a/plugin.xml
+++ b/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-custom-device"
+<plugin id="cordova-plugin-device-custom"
         version="0.0.1" xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android">
-    <name>cordova-plugin-custom-device</name>
+    <name>cordova-plugin-device-custom</name>
     <description>Cordova Cutom Device information Plugin</description>
     <keywords>cordova, device</keywords>
     <repo>https://github.com/kalistons/cordova-plugin-device-custom.git</repo>
@@ -10,12 +10,12 @@
         Cordova Cutom Device information Plugin
         based on the resources provided by the capacitor device https://capacitorjs.com/docs/apis/device
     </info>
-    <js-module name="deviceCustomPlugin" src="www/deviceCustomPlugin.js">
-        <clobbers target="deviceCustomPlugin"/>
+    <js-module name="device" src="www/deviceCustomPlugin.js">
+        <clobbers target="cordova.plugins.device-custom-plugin"/>
     </js-module>
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="deviceCustomPlugin">
+            <feature name="DeviceCustomPlugin">
                 <param name="android-package" value="cordova.plugin.custom.DeviceCustomPlugin"/>
             </feature>
         </config-file>
